# SimMe

./: .gitignore  README.md  pyproject.toml
src/: bot.py
